# Forsyt

./: .env.example  .gitignore  ARCHITECTURE.md  DESIGN_DECISIONS.md  GETTING_STARTED.md  METHODOLOGY.md  PROJECT_SUMMARY.txt  README.md  app.py  db.py  docker-compose.yml  download_data.py  main.py  pyproject.toml  render.yaml  requirements.txt  run_application.py  scheduler.py  scraper.py  utils.py  venv.md
.streamlit/: config.toml
Forsyt/: .gitignore
analysis/: 01_us_reproduction.py  02_india_nifty.py  03_backtest.py  REPORT.md  common.py
api/: Dockerfile  auth.py  dependencies.py  main.py  schemas.py
deploy/: README.md  daily_gpr_india.sh  hourly_update.sh  news-api.service  news-scheduler.service  weekly_validate.sh
extraction/: finbert_classifier.py  gpt_extractor.py  schema.py
forsyt_gpr/: INTEGRATION.md  README.md  __init__.py  data.py  downside.py  features.py  macro_var.py  vol_model.py
gpr_index/: aggregator.py  decay_smoother.py  normalizer.py  run_daily.py  scheduler.py  validator.py
howto/: MODULE_1_INGESTION.md  MODULE_2_GPR_INDEX.md  MODULE_3_ML_INFERENCE.md  MODULE_4_API_GATEWAY.md
ingestion/: Dockerfile  cleaner.py  deduplicator.py  gdelt_gpr_sample.py  gdelt_puller.py  pipeline.py  scheduler.py
ml_inference/: evaluate.py  feature_engineering.py  market_data.py  run_daily.py  shap_explainer.py  train.py
monitoring/: grafana_dashboard.json  prometheus_config.yml
notebooks/: README.md
plan/: application.md  dashboard.md  indian_news_adapter.md  phase1.md  validation_next_steps.md
scraper/: __init__.py  __main__.py  api.py  db.py  (+3 more)
(+60 files in other folders)
